<resources>
    <string name="app_name">Test</string>
    <string name="todo">TODO</string>
    <string name="username_exemple">username Exemple</string>
    <string name="password_exemple">password Exemple</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hey_animation">HEY Animation</string>
    <string name="textview" />
    <string name="dqxdz" />
</resources>
